# adam-chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: test.py
src/: data_loader.py
src/agent/: __init__.py  agent_cli.py  orchestrator.py  status.py
src/agent/utils/: __init__.py  telemetry.py  verification.py
src/api/: __init__.py  main.py
src/document_processing/: document_processor.py  document_processor_factory.py  pdf_processor.py  text_processor.py
src/embeddings/: embed.py
src/eval/: __init__.py  runner.py
src/ingestion/: ingest.py
src/llm/: __init__.py  chatbot.py  groq_client.py  qa.py
src/vector_store/: query.py
tests/: test_status_schema.py  test_verification.py
